objects/Kiosk__c.object
<CustomObject>
    <fields>
        <fullName>Station_Face_Back__c</fullName>
        <formula>HYPERLINK(&quot;https://na14.salesforce.com/&quot;&amp;Station_SIN__r.Face_Specification_Back__c, Station_SIN__r.Face_Specification_Back__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station Face Back</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Face_Front_Text__c</fullName>
        <formula>Station_SIN__r.Face_Specification_Front__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station Face Front Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Face_Front__c</fullName>
        <formula>HYPERLINK(&quot;https://na14.salesforce.com/&quot;&amp;Station_SIN__r.Face_Specification_Front__c, Station_SIN__r.Face_Specification_Front__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station Face Front</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_No__c</fullName>
        <label>Station No</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_SIN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Station (SIN)</label>
        <referenceTo>Station__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Station_Type__c</fullName>
        <formula>TEXT (Station_SIN__r.Media_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <description>Project Managers: Here&apos;s where you can find a quick note on what it&apos;ll take to bring the Kiosk status back to Active.</description>
        <inlineHelpText>Project Managers: Here&apos;s where you can find a quick note on what it&apos;ll take to bring the Kiosk status back to Active.</inlineHelpText>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Site Inspection</fullName>
                    <color>#F96FB7</color>
                    <label>Initial Site Inspection</label>
                </value>
                <value>
                    <fullName>Under Construction</fullName>
                    <color>#FFFF66</color>
                    <label>Under Construction</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <color>#78C953</color>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Needs Service</fullName>
                    <color>#FF0000</color>
                    <label>Needs Service</label>
                </value>
                <value>
                    <fullName>Decommissioned - Out of Service</fullName>
                    <color>#333333</color>
                    <label>Decommissioned - Out of Service</label>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                    <color>#E27001</color>
                    <label>Disqualified</label>
                </value>
                <value>
                    <fullName>On Hold - Muni Obstacles</fullName>
                    <color>#8F6429</color>
                    <label>On Hold - Muni Obstacles</label>
                </value>
                <value>
                    <fullName>On Hold - Property Ownership</fullName>
                    <color>#AFCADF</color>
                    <label>On Hold - Property Ownership</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Kiosks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verizon_Signal_Strength__c</fullName>
        <description>In -db</description>
        <inlineHelpText>In -db</inlineHelpText>
        <label>Verizon Signal Strength</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W9_Recipients__c</fullName>
        <label>W9 Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Widget__c</fullName>
        <formula>EKM_Meter__r.Widget_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Widget URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wire_Gauge__c</fullName>
        <description>Standard Gauging in AWG (American Wire Gauge) Copper Wire</description>
        <inlineHelpText>Standard Gauging in AWG (American Wire Gauge) Copper Wire</inlineHelpText>
        <label>Wire Gauge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AWG</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wire_Run_Length__c</fullName>
        <description>Length of wire/conduit from service panel breaker to charge unit.</description>
        <inlineHelpText>Length of wire/conduit from service panel breaker to charge unit.</inlineHelpText>
        <label>Wire Run Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Nielsen_DMA__c</fullName>
        <formula>Site_Account__r.Zip_Nielsen_DMA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zip Nielsen DMA from Site Account</inlineHelpText>
        <label>Zip Nielsen DMA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>readMeter__c</fullName>
        <formula>EKM_Meter__r.Meter_URL_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meter URL</label>
        <type>Text</type>
    </fields>
    <label>Location (LIN)</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>LIN__c</columns>
        <columns>LIN_Text__c</columns>
        <columns>NAME</columns>
        <columns>Site_Account__c</columns>
        <columns>Network_Region__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>Lat_Lon_Looked_Up_At__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Client_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Kiosk__c.Installation_Location</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>Active1</fullName>
        <columns>Kiosk_Tracking_ID_No__c</columns>
        <columns>NAME</columns>
        <columns>Site_Account__c</columns>
        <columns>Network_Region__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>Lat_Lon_Looked_Up_At__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Client_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Kiosk__c.Installation_Location</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>Active_all</fullName>
        <columns>Kiosk_Tracking_ID_No__c</columns>
        <columns>NAME</columns>
        <columns>Site_Account__c</columns>
        <columns>Network_Region__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>Lat_Lon_Looked_Up_At__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Client_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Kiosk__c.Installation_Location</value>
        </filters>
        <label>Active - all</label>
    </listViews>
    <listViews>
        <fullName>All_Installation_Locations</fullName>
        <columns>LIN__c</columns>
        <columns>Network_Region__c</columns>
        <columns>NAME</columns>
        <columns>Est_Monthly_Impressions_Per_Station__c</columns>
        <columns>Status__c</columns>
        <columns>Construction_Project__c</columns>
        <columns>Site_Account__c</columns>
        <columns>Station_SIN__c</columns>
        <columns>Station_EKM_Meter_Left__c</columns>
        <columns>Station_EKM_Meter_Right__c</columns>
        <columns>LatLong__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>Geolocation__Latitude__s</columns>
        <columns>Geolocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <label>All Installation Locations</label>
    </listViews>
    <listViews>
        <fullName>All_Installation_Locations_Media_Not_Bla</fullName>
        <columns>NAME</columns>
        <columns>Kiosk_Tracking_ID_No__c</columns>
        <columns>Station_SIN__c</columns>
        <columns>Status__c</columns>
        <columns>Network_Region__c</columns>
        <columns>Site_Account__c</columns>
        <columns>EKM_Meter__c</columns>
        <columns>No_of_Faces__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Kiosk__c.Installation_Location</value>
        </filters>
        <label>All Installation Locations Media Not Bla</label>
    </listViews>
    <listViews>
        <fullName>All_Installation_Locations_website</fullName>
        <columns>NAME</columns>
        <columns>Kiosk_Tracking_ID_No__c</columns>
        <columns>Station_SIN__c</columns>
        <columns>Status__c</columns>
        <columns>Network_Region__c</columns>
        <columns>Site_Account__c</columns>
        <columns>EKM_Meter__c</columns>
        <columns>No_of_Faces__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Kiosk__c.Installation_Location</value>
        </filters>
        <label>All Installation Locations SIM</label>
    </listViews>
    <listViews>
        <fullName>All_V3</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Site_Account__c</columns>
        <columns>Construction_Project__c</columns>
        <columns>CP_Stage__c</columns>
        <columns>EKM_Meter__c</columns>
        <columns>EKM_Push__c</columns>
        <columns>No_of_Faces__c</columns>
        <columns>Revenue_Generating__c</columns>
        <columns>CP_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Decommissioned - Out of Service,Disqualified,Initial Site Inspection,Under Con</value>
        </filters>
        <filters>
            <field>CP_Completion_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All V3</label>
    </listViews>
    <listViews>
        <fullName>All_Warehouses</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Site_Account__c</columns>
        <columns>Network_Region__c</columns>
        <columns>City__c</columns>
        <columns>Rent_Payee__c</columns>
        <columns>Rent_Frequency__c</columns>
        <columns>Rent__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>LatLong__c</columns>
        <columns>Geolocation__Latitude__s</columns>
        <columns>Geolocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012d0000001UOwg</value>
        </filters>
        <label>All Warehouses</label>
    </listViews>
    <listViews>
        <fullName>Anna_s_view_WFLA</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network_Region__c</field>
            <operation>equals</operation>
            <value>CA - Los Angeles,CA - Orange County,CA - San Diego</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>whole foods,WF</value>
        </filters>
        <label>Anna&apos;s view (WFLA)</label>
    </listViews>
    <listViews>
        <fullName>Arizona</fullName>
        <columns>NAME</columns>
        <columns>Kiosk_Tracking_ID_No__c</columns>
        <columns>Status__c</columns>
        <columns>Network_Region__c</columns>
        <columns>Construction_Project__c</columns>
        <columns>No_of_Faces__c</columns>
        <columns>Site_Account__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>AZ</value>
        </filters>
        <label>Arizona</label>
    </listViews>
    <listViews>
        <fullName>CA</fullName>
        <columns>NAME</columns>
        <columns>Street_Address__c</columns>
        <columns>Kiosk_Tracking_ID_No__c</columns>
        <columns>Status__c</columns>
        <columns>Network_Region__c</columns>
        <columns>Construction_Project__c</columns>
        <columns>No_of_Faces__c</columns>
        <columns>Site_Account__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <label>CA</label>
    </listViews>
    <listViews>
        <fullName>Chicago_Network_Locations</fullName>
        <columns>NAME</columns>
        <columns>Station_SIN__c</columns>
        <columns>Status__c</columns>
        <columns>Construction_Project__c</columns>
        <columns>CP_Stage__c</columns>
        <columns>No_of_Faces__c</columns>
        <columns>Site_Account__c</columns>
        <columns>CP_Street_Address__c</columns>
        <columns>CP_City__c</columns>
        <columns>EKM_Meter__c</columns>
        <columns>EKM_Push__c</columns>
        <columns>Widget__c</columns>
        <columns>Kiosk_Tracking_ID_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network_Region__c</field>
            <operation>equals</operation>
            <value>Chicago</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Decommissioned - Out of Service,Disqualified</value>
        </filters>
        <label>Chicago Network Locations</label>
    </listViews>
    <listViews>
        <fullName>Decommissioned</fullName>
        <columns>Kiosk_Tracking_ID_No__c</columns>
        <columns>Station_SIN__c</columns>
        <columns>NAME</columns>
        <columns>CP_Street_Address__c</columns>
        <columns>EKM_Meter__c</columns>
        <columns>EKM_Push__c</columns>
        <columns>Widget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Decommissioned - Out of Service</value>
        </filters>
        <label>Decommissioned</label>
    </listViews>
    <listViews>
        <fullName>Hawaii</fullName>
        <columns>NAME</columns>
        <columns>Station_SIN__c</columns>
        <columns>Street_Address__c</columns>
        <columns>Kiosk_Tracking_ID_No__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Network_Region__c</columns>
        <columns>Construction_Project__c</columns>
        <columns>No_of_Faces__c</columns>
        <columns>Site_Account__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>LatLong__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>HI</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Under Construction,Decommissioned - Out of Service,Disqualified</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>On Hold - Muni Obstacles,On Hold - Property Ownership</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Initial Site Inspection</value>
        </filters>
        <label>Hawaii</label>
    </listViews>
    <listViews>
        <fullName>Hawaii_Installed</fullName>
        <columns>NAME</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>Network_Region__c</columns>
        <columns>Kiosk_Tracking_ID_No__c</columns>
        <columns>Status__c</columns>
        <columns>Construction_Project__c</columns>
        <columns>No_of_Faces__c</columns>
        <columns>Site_Account__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>HI</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Metering Issue</value>
        </filters>
        <label>Hawaii Installed</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations (LIN)</pluralLabel>
    <recordTypes>
        <fullName>Installation_Location</fullName>
        <active>true</active>
        <description>This is where a station is, or will be, installed.</description>
        <label>Installation Location</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>All_Locations_have_Charging_Engineered</fullName>
        <active>true</active>
        <description>Needs &quot;Charging Engineered for&quot; Field not blank before moving from stage &quot;Initial Site Inspection&quot;</description>
        <errorConditionFormula>AND 
(ISPICKVAL ( Status__c,&quot;Under Construction&quot;), 
ISBLANK( TEXT(Charging_Engineered_for__c) ) 
)</errorConditionFormula>
        <errorDisplayField>Charging_Engineered_for__c</errorDisplayField>
        <errorMessage>Needs &quot;Charging Engineered for&quot; Field not blank before moving from stage &quot;Initial Site Inspection&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>All_Locations_have_GeoLat_before_Active</fullName>
        <active>true</active>
        <description>Needs &quot;Geolocation Latitude&quot; Field not blank before moving from stage &quot;Active&quot;</description>
        <errorConditionFormula>AND 
(ISPICKVAL ( Status__c,&quot;Active&quot;), 
ISBLANK(Geolocation__Latitude__s) 
)</errorConditionFormula>
        <errorMessage>Needs &quot;Geolocation (Latitude)&quot; Field not blank before moving to stage &quot;Active&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>All_Locations_have_GeoLong_before_Active</fullName>
        <active>true</active>
        <description>Needs &quot;Geolocation Longitude&quot; Field not blank before moving from stage &quot;Active&quot;</description>
        <errorConditionFormula>AND 
(ISPICKVAL ( Status__c,&quot;Active&quot;), 
ISBLANK(Geolocation__Longitude__s) 
)</errorConditionFormula>
        <errorMessage>Needs &quot;Geolocation (Longitude)&quot; Field not blank before moving to stage &quot;Active&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>All_Locations_have_Latitude_before_Activ</fullName>
        <active>true</active>
        <description>Needs &quot;Latitude&quot; Field not blank before moving from stage &quot;Active&quot;</description>
        <errorConditionFormula>AND 
(ISPICKVAL ( Status__c,&quot;Active&quot;), 
ISBLANK(Latitude__c) 
)</errorConditionFormula>
        <errorDisplayField>Latitude__c</errorDisplayField>
        <errorMessage>Needs &quot;Latitude&quot; Field not blank before moving to stage &quot;Active&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>All_Locations_have_Longitud_before_Activ</fullName>
        <active>true</active>
        <description>Needs &quot;Longitude&quot; Field not blank before moving from stage &quot;Active&quot;</description>
        <errorConditionFormula>AND 
(ISPICKVAL ( Status__c,&quot;Active&quot;), 
ISBLANK(Longitude__c) 
)</errorConditionFormula>
        <errorDisplayField>Longitude__c</errorDisplayField>
        <errorMessage>Needs &quot;Longitude&quot; Field not blank before moving to stage &quot;Active&quot;</errorMessage>
    </validationRules>
</CustomObject>